(Starter) Create page, Edit page also  Not Found Page  v 3.0.1

--- a/src/Components/ProjectModel/style.scss
+++ b/src/Components/ProjectModel/style.scss
@@ -22,38 +22,9 @@
       .action-section {
         display: flex;
 
-        .edit-icon {
-          .icon {
-            width: 25px;
-            height: 25px;
-          }
-
-          &:hover {
-            cursor: pointer;
-          }
-
-          &:active {
-            cursor: pointer;
-            color: rgb(48, 48, 172);
-            transition: 0.4s ease, border-bottom 0ms, padding-top 0ms;
-          }
-        }
-
-        .delete-icon {
-          .icon {
-            width: 25px;
-            height: 25px;
-          }
-
-          &:hover {
-            cursor: pointer;
-          }
-
-          &:active {
-            cursor: pointer;
-            color: rgb(231, 40, 40);
-            transition: 0.4s ease, border-bottom 0ms, padding-top 0ms;
-          }
+        .action-icon-link {
+          color: black;
+          text-decoration: none;
         }
       }
     }
