(Starter) Edit and Delete v 3.0.5

--- a/src/pages/Settings/style.scss
+++ b/src/pages/Settings/style.scss
@@ -10,9 +10,9 @@
     width: 30vw;
     padding-top: 15vh;
     padding-bottom: 15vh;
-    padding: 20px 20px 30px 20px;
+    padding: 40px 0 40px 0;
     background-color: white;
-    border-radius: 20px;
+    border-radius: 10px;
 
     h2 {
       align-self: center;
