--- a/src/Components/ProjectModel/style.scss
+++ b/src/Components/ProjectModel/style.scss
@@ -26,6 +26,12 @@
           color: black;
           text-decoration: none;
         }
+        .invisible-button {
+          border: none;
+          background: none;
+          padding: 0;
+          cursor: pointer;
+        }
       }
     }
 
