(Starter) Dark mode - not working! v 3.0.6

--- a/src/pages/App/background-color.scss
+++ b/src/pages/App/background-color.scss
@@ -3,10 +3,10 @@ body {
   background-color: rgb(232, 231, 231);
 }
 
-// #light {
-//   background-color: transparent;
-// }
+#light {
+  background-color: transparent;
+}
 
-// #dark {
-//   background-color: rgb(13, 13, 13);
-// }
+#dark {
+  background-color: rgb(13, 13, 13);
+}
