--- a/src/Components/Layout/LeftBar/style.scss
+++ b/src/Components/Layout/LeftBar/style.scss
@@ -26,18 +26,18 @@
   }
 }
 
-// #light .left-bar {
-//   background-color: white;
-//   .left-bar-link {
-//     color: black;
-//   }
-// }
+#light .left-bar {
+  background-color: white;
+  .left-bar-link {
+    color: black;
+  }
+}
 
-// #dark .left-bar {
-//   border-left: 1px rgba(255, 255, 255, 0.248) solid; //mozliwo usune ta linijke
-//   background-color: black;
-//   box-shadow: 0px 0px 22px -12px rgb(255, 255, 255); //mozliwo usune ta linijke
-//   .left-bar-link {
-//     color: white;
-//   }
-// }
+#dark .left-bar {
+  border-left: 1px rgba(255, 255, 255, 0.248) solid; //mozliwo usune ta linijke
+  background-color: black;
+  box-shadow: 0px 0px 22px -12px rgb(255, 255, 255); //mozliwo usune ta linijke
+  .left-bar-link {
+    color: white;
+  }
+}
