--- a/src/Components/Сomponents of the project module/NewProjectModel/style.scss
+++ b/src/Components/Сomponents of the project module/NewProjectModel/style.scss
@@ -44,3 +44,19 @@
     }
   }
 }
+
+// #light .settings-page {
+//   color: black;
+//   .settings-section {
+//     background-color: white;
+//   }
+// }
+
+// #dark .settings-page {
+//   color: white;
+//   .settings-section {
+//     border: 1px rgba(255, 255, 255, 0.248) solid;
+//     background-color: black;
+//     box-shadow: 0px 0px 22px -12px rgb(255, 255, 255);
+//   }
+// }
