--- a/src/Components/Button components/EditBtnFromEditPage/style.scss
+++ b/src/Components/Button components/EditBtnFromEditPage/style.scss
@@ -7,32 +7,27 @@
   font-size: 300;
   font-weight: bold;
 
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+#light .edit-btn {
   color: white;
   background-color: rgb(0, 0, 0);
 
   &:hover {
-    cursor: pointer;
     background-color: rgb(59, 108, 213);
     color: rgb(255, 255, 255);
   }
 }
 
-// #light .create-btn {
-//   color: white;
-//   background-color: rgb(0, 0, 0);
+#dark .edit-btn {
+  color: black;
+  background-color: rgb(59, 108, 213);
 
-//   &:hover {
-//     background-color: rgb(59, 213, 85);
-//     color: rgb(255, 255, 255);
-//   }
-// }
-
-// #dark .create-btn {
-//   color: black;
-//   background-color: rgb(255, 255, 255);
-
-//   &:hover {
-//     background-color: rgb(59, 213, 85);
-//     color: black;
-//   }
-// }
+  &:hover {
+    background-color: rgb(91, 150, 227);
+    color: black;
+  }
+}
