--- a/src/pages/NotFoundPage/style.scss
+++ b/src/pages/NotFoundPage/style.scss
@@ -6,30 +6,27 @@
   h1 {
     text-align: center;
     margin-bottom: 5vh;
-
-    color: red;
   }
 
   h2 {
     text-align: center;
+  }
+}
+
+#light .some-page {
+  h1 {
+    color: red;
+  }
+  h2 {
     color: black;
   }
 }
 
-// #light .some-page {
-//   h1 {
-//     color: red;
-//   }
-//   h2 {
-//     color: black;
-//   }
-// }
-
-// #dark .some-page {
-//   h1 {
-//     color: rgb(190, 3, 3);
-//   }
-//   h2 {
-//     color: white;
-//   }
-// }
+#dark .some-page {
+  h1 {
+    color: rgb(190, 3, 3);
+  }
+  h2 {
+    color: white;
+  }
+}
