Detailed Project Model v 4.0.6

--- a/src/Components/Сomponents of the project module/NewProjectModel/style.scss
+++ b/src/Components/Сomponents of the project module/NewProjectModel/style.scss
@@ -44,7 +44,7 @@
   background-color: white;
 
   input {
-    color: color;
+    color: black;
     background-color: white;
     border-bottom: 1px solid lightgray;
   }
@@ -59,6 +59,6 @@
   input {
     color: white;
     background-color: black;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid darkgray;
   }
 }
