--- a/src/Components/Сomponents of the project model/NewProjectModel/style.scss
+++ b/src/Components/Сomponents of the project model/NewProjectModel/style.scss
@@ -1,18 +1,18 @@
-.currently-project-model-container {
+.new-project-model-container {
   border-radius: 10px;
   padding: 40px 0 40px 0;
 
-  .common-card {
+  .common-card-new-project-model-container {
     display: flex;
 
-    .main-contener {
+    .main-contener-new-project-model-container {
       margin: 0 auto;
       width: 50vw;
       display: flex;
       flex-direction: column;
       gap: 15px;
 
-      .page-name {
+      .page-name-new-project-model-container {
         font-size: 50px;
         font-weight: 750;
       }
@@ -30,6 +30,10 @@
             outline: none;
           }
         }
+
+        .create-btn {
+          margin-left: 640px;
+        }
       }
       span {
         font-size: 16px;
@@ -39,7 +43,7 @@
   }
 }
 
-#light .currently-project-model-container {
+#light .new-project-model-container {
   color: black;
   background-color: white;
 
@@ -50,7 +54,7 @@
   }
 }
 
-#dark .currently-project-model-container {
+#dark .new-project-model-container {
   color: white;
   border: 1px rgba(255, 255, 255, 0.248) solid;
   background-color: black;
@@ -59,6 +63,6 @@
   input {
     color: white;
     background-color: black;
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid darkgray;
   }
 }
