--- a/src/pages/EditStory/style.scss
+++ b/src/pages/EditStory/style.scss
@@ -1,13 +1,13 @@
-.single-project-model-page {
+.edit-story-page {
   // line-height: 1.6; /*interwal - medzy divami*/
   // word-spacing: 1.4px; /*miedzy slowami - space*/
   display: flex;
   flex: 0.8;
   justify-content: center;
   align-items: center;
-  height: 50vh;
+  height: 80vh;
 
-  .single-project-model {
+  .existing-project-model {
     width: 55vw;
   }
 }
