--- a/src/pages/Home/style.scss
+++ b/src/pages/Home/style.scss
@@ -1,80 +1,24 @@
 .home-page {
   display: flex;
   flex: 0.8;
-  flex-direction: colrumn;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  // .container-​​search-for-a-city {
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: space-between;
-
-  //   margin-top: 4vh;
-  //   margin-bottom: 5vh;
-  //   margin-left: 45px;
-  //   margin-right: 45px;
-  //   border: 1px solid rgb(42, 40, 40);
-  //   border-radius: 20px;
-  //   box-shadow: 0px 2px 7px -1px rgba(0, 0, 0, 0.19);
-  //   background-color: rgb(42, 40, 40);
-  //   max-width: 99vw;
-  //   max-height: 40vh;
-  //   padding: 6px;
-
-  //   .​​search-for-a-city {
-  //     display: flex;
-  //     // align-items: center;
-  //     gap: 10px;
-  //     border: 1px solid themed("border");
-  //     border-radius: 5px;
-  //     padding: 5px;
-
-  //     input {
-  //       padding: 2px;
-  //       padding-right: 17px;
-  //       border: none;
-  //       width: 95%;
-  //       height: 30px;
-  //       background-color: transparent;
-
-  //       &:focus {
-  //         outline: none;
-  //         color: white;
-  //       }
-  //     }
-
-  //     input,
-  //     input::-webkit-input-placeholder {
-  //       font-size: 25px;
-  //       line-height: 4;
-  //     }
-
-  //     .btn-add {
-  //       border: none;
-  //       background-color: rgb(42, 40, 40);
-
-  //       .material-symbols-rounded {
-  //         transition: 0.2s;
-  //         scale: 160%;
-
-  //         &:hover {
-  //           cursor: pointer;
-  //           color: grey;
-  //         }
-  //       }
-  //     }
-  //   }
-  // }
+  .search-for-projects {
+    margin: 20px 0;
+    width: 80vw;
+  }
 
   .project {
-    width: 80vw;
-    padding-bottom: 15vh;
+    width: 80vw; //Temporarily
+    padding: 0 0 15vh 0;
   }
 
-  .a-margin-top {
-    margin-top: 40px;
-  }
+  //Temporarily
+  // .a-margin-top {
+  //   //margin-top: 40px;
+  // }
 
   .d-flex {
     display: flex;
