Design of stories v 4.0.9

--- a/src/Components/Сomponents of the project model/NewProjectModel/style.scss
+++ b/src/Components/Сomponents of the project model/NewProjectModel/style.scss
@@ -1,5 +1,6 @@
 .new-project-model-container {
   border-radius: 10px;
+  margin: 100px 0 0 0;
   padding: 40px 0 40px 0;
 
   .common-card-new-project-model-container {
