--- a/src/Components/SearchFor/style.scss
+++ b/src/Components/SearchFor/style.scss
@@ -18,8 +18,7 @@
     padding: 5px;
 
     input {
-      padding: 2px;
-      padding-right: 17px;
+      padding: 2px 17px 0 0;
       border: none;
       width: 100%;
       height: 30px;
