--- a/src/Components/Сomponents of the detailed project module/BaseProjectModel/style.scss
+++ b/src/Components/Сomponents of the detailed project module/BaseProjectModel/style.scss
@@ -34,6 +34,7 @@
 
 .base-project-model-container {
   border-radius: 10px;
+  margin: 80px 0 20px 0;
 
   .base-project-model-task {
     .base-project-model-details-section {
