--- a/src/Components/Сomponents of the story module/NewStoryModule/style.scss
+++ b/src/Components/Сomponents of the story module/NewStoryModule/style.scss
@@ -3,6 +3,7 @@
   // border-radius: 10px;
   // padding: 40px 0 40px 0;
   width: 55vw;
+  margin: 100px 0 0 0;
   border-radius: 10px;
   padding: 35px 0 35px 0;
 
@@ -12,7 +13,7 @@
         text-align: center;
         margin: 0 0 25px 0;
 
-        font-size: 25px;
+        font-size: 35px;
         font-weight: 750;
       }
 
@@ -29,7 +30,8 @@
           input {
             margin: 0 0 0 69px; // margin: 0 0 0 62px; //if i dont use to  - font-weight: bold;
             border-radius: 5px; //Temporary
-            //border: none;
+            border: none;
+            height: 25px;
           }
         }
         .form-desc-task {
@@ -39,7 +41,8 @@
           input {
             margin: 0 0 0 25px; //margin: 0 0 0 25px; //if i dont use to  - font-weight: bold;
             border-radius: 5px; //Temporary
-            //border: none;
+            height: 25px;
+            border: none;
           }
         }
         .form-priority-task {
@@ -49,7 +52,9 @@
           select {
             margin: 0 0 0 58px; //margin: 0 0 0 56px; //if i dont use to  - font-weight: bold;
             border-radius: 5px; //Temporary
-            //border: none;
+            border: none;
+            height: 25px;
+
             option {
             }
           }
@@ -61,27 +66,33 @@
           select {
             margin: 0 0 0 66px; //margin: 0 0 0 61px; //if i dont use to  - font-weight: bold;
             border-radius: 5px; //Temporary
-            //border: none;
+            height: 25px;
+            border: none;
+
             option {
             }
           }
         }
-      }
 
-      .section-btns-new-story-module {
-        margin: 50px 0 0 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-        .confirm-btn-from-new-story-module {
-          width: 100%;
-          padding-left: 215px;
-        }
-        .cancel-btn-from-new-story-module {
-          width: 100%;
+        .confirm-btn {
+          margin-left: 350px;
         }
       }
+
+      // .section-btns-new-story-module {
+      //   margin: 50px 0 0 0;
+      //   display: flex;
+      //   align-items: center;
+      //   justify-content: center;
+
+      //   .confirm-btn-from-new-story-module {
+      //     width: 100%;
+      //     padding-left: 215px;
+      //   }
+      //   .cancel-btn-from-new-story-module {
+      //     width: 100%;
+      //   }
+      // }
     }
   }
 }
@@ -90,6 +101,16 @@
   color: black;
   background-color: white;
   border: 1px white solid;
+
+  input {
+    color: black;
+    background-color: #f5f5f5;
+  }
+
+  select {
+    color: black;
+    background-color: #f5f5f5;
+  }
 }
 
 #dark .new-story-model-container {
@@ -97,4 +118,14 @@
   border: 1px rgba(255, 255, 255, 0.248) solid;
   background-color: black;
   box-shadow: 0px 0px 22px -12px rgb(255, 255, 255);
+
+  input {
+    color: white;
+    background-color: #141414;
+  }
+
+  select {
+    color: white;
+    background-color: #141414;
+  }
 }
