--- a/src/Components/Сomponents of the project model/ProjectModel/style.scss
+++ b/src/Components/Сomponents of the project model/ProjectModel/style.scss
@@ -10,7 +10,7 @@
       align-items: center;
       justify-content: space-between;
 
-      .name-section {
+      .project-model-name-section {
         width: 520px;
 
         .single-project-model-link {
