--- a/src/Components/Button components/CreateBtnFromCreateTask/style.scss
+++ b/src/Components/Button components/CreateBtnFromCreateTask/style.scss
@@ -1,4 +1,4 @@
-.create-btn-task {
+.create-btn-story {
   width: 15%;
   padding: 11px;
   border-radius: 6px;
@@ -17,7 +17,7 @@
   }
 }
 
-#light .create-btn-task {
+#light .create-btn-story {
   color: white;
   background-color: rgb(0, 0, 0);
 
@@ -27,7 +27,7 @@
   }
 }
 
-#dark .create-btn-task {
+#dark .create-btn-story {
   color: black;
   background-color: rgb(39, 172, 61);
 
