Lab 2 and Lab 3

--- a/src/Components/Сomponents of the project model/ProjectModel/style.scss
+++ b/src/Components/Сomponents of the project model/ProjectModel/style.scss
@@ -55,6 +55,12 @@
 
   .single-project-model-link {
     color: black;
+
+    &:active {
+      cursor: pointer;
+      color: rgb(77, 77, 77);
+      transition: 0.4s ease, border-bottom 0ms, padding-top 0ms;
+    }
   }
 
   .action-icon-link {
@@ -74,6 +80,12 @@
 
   .single-project-model-link {
     color: white;
+
+    &:active {
+      cursor: pointer;
+      color: rgb(171, 171, 171);
+      transition: 0.4s ease, border-bottom 0ms, padding-top 0ms;
+    }
   }
 
   .action-icon-link {
