--- a/src/Components/Layout/LeftBar/style.scss
+++ b/src/Components/Layout/LeftBar/style.scss
@@ -11,6 +11,7 @@
 
   .container {
     padding: 20px;
+
     .menu {
       display: flex;
       flex-direction: column;
@@ -18,6 +19,10 @@
 
       .left-bar-link {
         text-decoration: none;
+      }
+
+      .left-bar-link:last-child {
+        margin-top: 300px;
       }
     }
   }
@@ -28,13 +33,26 @@
   .left-bar-link {
     color: black;
   }
+
+  .link-hover {
+    &:hover {
+      color: rgb(77, 77, 77);
+      transition: 0s ease, border-bottom 0ms, padding-top 0ms;
+    }
+  }
 }
 
 #dark .left-bar {
-  border-left: 1px rgba(255, 255, 255, 0.248) solid; //mozliwo usune ta linijke
   background-color: black;
-  box-shadow: 0px 0px 22px -12px rgb(255, 255, 255); //mozliwo usune ta linijke
+  box-shadow: 0px 0px 22px -12px rgb(255, 255, 255);
   .left-bar-link {
     color: white;
+  }
+
+  .link-hover {
+    &:hover {
+      color: rgb(171, 171, 171);
+      transition: 0s ease, border-bottom 0ms, padding-top 0ms;
+    }
   }
 }
