--- a/src/Components/Сomponents of the task model/KanbanBoardModel/style.scss
+++ b/src/Components/Сomponents of the task model/KanbanBoardModel/style.scss
@@ -4,22 +4,23 @@
   .kanban-board {
     display: flex;
     justify-content: center;
+    justify-content: space-between; //space-evenly;
     gap: 20px;
 
     .board {
       border-radius: 10px;
-      padding: 0px 140px 460px 0px;
+      padding: 0 0 400px 0; //SIZE BOARD
 
       .board-title {
-        margin: 10px 100px 0 0;
-        padding: 10px 25px;
-        //background-color: yellow;
+        padding: 10px 100px 10px 100px;
 
         h2 {
         }
       }
 
       .item {
+        display: flex;
+        flex-direction: column;
         justify-content: center;
       }
     }
