--- a/src/Components/Сomponents of the project model/NewProjectModel/style.scss
+++ b/src/Components/Сomponents of the project model/NewProjectModel/style.scss
@@ -32,7 +32,7 @@
           }
         }
 
-        .create-btn {
+        .create-btn-for-create-page {
           margin-left: 640px;
         }
       }
