--- a/src/Components/Button components/LoginBtnForLoginPage/style.scss
+++ b/src/Components/Button components/LoginBtnForLoginPage/style.scss
@@ -1,3 +1,5 @@
+@import url("../../../Style/RootStyle/RootButton/RootLogInButton/RootLogInButton.css");
+
 .log-in-btn-for-login-page {
   width: 40%;
   padding: 15px;
@@ -13,21 +15,21 @@
 }
 
 #light .log-in-btn-for-login-page {
-  color: white;
-  background-color: rgb(0, 0, 0);
+  color: var(--light-color-for-log-in-btn);
+  background-color: var(--light-background-color-for-log-in-btn);
 
   &:hover {
-    background-color: rgb(59, 108, 213);
-    color: rgb(255, 255, 255);
+    color: var(--light-color-hover-for-log-in-btn);
+    background-color: var(--light-background-color-hover-for-log-in-btn);
   }
 }
 
 #dark .log-in-btn-for-login-page {
-  color: black;
-  background-color: rgb(59, 108, 213);
+  color: var(--dark-color-for-log-in-btn);
+  background-color: var(--dark-background-color-for-log-in-btn);
 
   &:hover {
-    background-color: rgb(91, 150, 227);
-    color: black;
+    color: var(--dark-color-hover-for-log-in-btn);
+    background-color: var(--dark-background-color-hover-for-log-in-btn);
   }
 }
