--- a/src/Components/Layout/LeftBarSections/LogoSection/style.scss
+++ b/src/Components/Layout/LeftBarSections/LogoSection/style.scss
@@ -1,12 +1,15 @@
+@import url("../../../../Style/RootStyle/RootLayout/RootLayout.css");
+
 .logo {
   h1 {
     font-size: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
+
     &:active {
       cursor: pointer;
-      color: rgb(113, 113, 125);
+      color: var(--color-for-left-bar-logo-section);
       transition: 0.4s ease, border-bottom 0ms, padding-top 0ms;
     }
   }
