Kanban board - (Part 2 - Create ) - v 4.0.15

--- a/src/pages/CreateTask/style.scss
+++ b/src/pages/CreateTask/style.scss
@@ -1,4 +1,4 @@
-.create-story-page {
+.create-task-page {
   // line-height: 1.6; /*interwal - medzy divami*/
   // word-spacing: 1.4px; /*miedzy slowami - space*/
   display: flex;
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
 
-  .new-story-model {
+  .new-task-model {
     width: 55vw;
   }
 }
