--- a/src/Components/Сomponents of the task model/KanbanBoardModel/style.scss
+++ b/src/Components/Сomponents of the task model/KanbanBoardModel/style.scss
@@ -1,5 +1,15 @@
 .kanban-board-container {
-  margin: 100px 0 0 0;
+  margin: 20px 0 0 0;
+
+  .name-story-kanban-board {
+    text-align: center;
+    margin: 40px 0 20px 0;
+  }
+
+  form {
+    margin: 10px 0 30px 0;
+    text-align: center;
+  }
 
   .kanban-board {
     display: flex;
@@ -28,6 +38,9 @@
 }
 
 #light .kanban-board-container {
+  .name-story-kanban-board {
+    color: black;
+  }
   .kanban-board {
     .board {
       background-color: white;
@@ -39,6 +52,9 @@
 }
 
 #dark .kanban-board-container {
+  .name-story-kanban-board {
+    color: white;
+  }
   .kanban-board {
     .board {
       border: 1px rgba(255, 255, 255, 0.248) solid;
