--- a/src/Components/Сomponents of the task model/KanbanBoardModel/style.scss
+++ b/src/Components/Сomponents of the task model/KanbanBoardModel/style.scss
@@ -18,8 +18,9 @@
     gap: 20px;
 
     .board {
+      align-items: center;
       border-radius: 10px;
-      padding: 0 0 400px 0; //SIZE BOARD
+      padding: 0 0 30px 0; //SIZE BOARD
 
       .board-title {
         padding: 10px 100px 10px 100px;
