--- a/src/Components/Сomponents of the task model/TaskDialogModel/style.scss
+++ b/src/Components/Сomponents of the task model/TaskDialogModel/style.scss
@@ -1,12 +1,22 @@
 .task-dialog-container {
+  //padding: 0 100px 0 100px; //DON'T WORK!!!
+
   .task-dialog-title {
+    padding: 10px 190px 10px;
+    font-weight: bold;
   }
   .task-dialog-form {
     .task-dialog-desc {
+      color: black;//TEMPORARILY
+      padding: 10px 0 10px;
     }
     .task-dialog-priority {
+      color: black;//TEMPORARILY
+      padding: 5px 0 5px;
     }
     .task-dialog-status {
+      color: black;//TEMPORARILY
+      padding: 5px 0 5px;
     }
   }
   .task-dialog-action {
